src/styles/elements/_collection-item.css
/* ... */
.collection-item[item-orientation="vertical"] {
    --collection-item-flex-direction: column;
}

.collection-item[item-orientation="horizontal"] {
    --collection-item-bottom-padding: var(--spacing-m) 0;
    --collection-item-flex-direction: column;
    --collection-item-shadow: none;
}

.collection-item[item-design="primary"],
.collection-item[item-design="secondary"],
.collection-item[item-design="inverted"] {
    --collection-item-text-color: var(--color-bg);
    --collection-item-title-color: var(--color-bg);
    --collection-item-button-text-color: var(--color-bg);
}

.collection-item[item-design="primary"] {
    --collection-item-bg-color: var(--color-primary);
    --collection-item-date-background-color: var(--color-primary);
    --collection-item-info-icon-color: var(--color-white);
}

.collection-item[item-design="secondary"] {
    --collection-item-bg-color: var(--color-secondary);
    --collection-item-date-background-color: var(--color-secondary);
    --collection-item-info-icon-color: var(--color-white);
    --collection-item-button-text-color-hover: var(--color-secondary-dark);
}

.collection-item[item-design="inverted"] {
    --collection-item-bg-color: var(--color-font-dark);
    --collection-item-date-background-color: var(--color-font-dark);
    --collection-item-info-icon-color: var(--color-white);
    --collection-item-button-text-color-hover: var(--color-font-light);
}

.collection-item[item-type="product"][item-orientation="vertical"] {
    --collection-item-bottom-padding: var(--spacing-s) var(--spacing-normal);
    --collection-item-title-color: var(--color-bg);
}

.collection-item__top {
    position: var(--collection-item-top-position);
    margin: var(--collection-item-top-margin);
    height: var(--collection-item-top-height);
}

.collection-item__figure {
    border-radius: var(--collection-item-figure-border-radius);
    overflow: var(--collection-item-figure-overflow);
}

.collection-item__image {
    aspect-ratio: var(--collection-item-image-ratio);
    object-fit: var(--collection-item-image-object-fit);
}

.collection-item__categories {
    position: var(--collection-item-categories-position);
    top: var(--collection-item-categories-top);
    left: var(--collection-item-categories-left);
}

.collection-item__category {
    background-color: var(--collection-item-category-background-color);
    color: var(--collection-item-category-color);
    display: var(--collection-item-category-display);
    align-items: var(--collection-item-category-align-items);
    justify-content: var(--collection-item-category-justify-content);
    gap: var(--collection-item-category-gap);
    line-height: var(--collection-item-category-line-height);
    padding: var(--collection-item-category-padding);
    margin: var(--collection-item-category-margin);
    border-radius: var(--collection-item-category-border-radius);
    font-size: var(--collection-item-category-font-size);
    width: var(--collection-item-category-width);
}

.collection-item__date {
    position: var(--collection-item-date-position);
    height: var(--collection-item-date-height);
    width: var(--collection-item-date-width);
    top: var(--collection-item-date-top);
    left: var(--collection-item-date-left);
    background-color: var(--collection-item-date-background-color);
    border-radius: var(--collection-item-date-border-radius);
    display: var(--collection-item-date-display);
    align-items: var(--collection-item-date-align-items);
    justify-content: var(--collection-item-date-justify-content);
    flex-direction: var(--collection-item-date-flex-direction);
    padding: var(--collection-item-date-padding);
    color: var(--collection-item-date-color);
    line-height: var(--collection-item-date-line-height);
}

.collection-item__date-day {
    font-size: var(--collection-item-date-day-font-size);
    font-weight: var(--collection-item-date-day-font-weight);
}

.collection-item__date-month {
    text-transform: var(--collection-item-date-month-text-transfrom);
    font-size: var(--collection-item-date-month-font-size);
}

.collection-item__location {
    display: var(--collection-item-location-display);
    align-items: var(--collection-item-location-align-items);
    justify-content: var(--collection-item-location-justify-content);
    flex-direction: var(--collection-item-location-flex-direction);
    gap: var(--collection-item-location-gap);
    position: var(--collection-item-location-position);
    bottom: var(--collection-item-location-bottom);
    left: var(--collection-item-location-left);
    padding: var(--collection-item-location-padding);
    background: var(--collection-item-location-gradient);
    width: var(--collection-item-location-width);
    border-radius: var(--collection-item-location-border-radius);
    transform: var(--collection-item-location-transform);
}

.collection-item__location-city {
    font-size: var(--collection-item-city-font-size);
    font-family: var(--collection-item-city-font-family);
    font-weight: var(--collection-item-city-font-weight);
    color: var(--collection-item-city-color);
    margin: var(--collection-item-city-margin);
}

.collection-item__location-country {
    font-size: var(--collection-item-country-font-size);
    font-family: var(--collection-item-country-font-family);
    font-weight: var(--collection-item-country-font-weight);
    color: var(--collection-item-country-color);
    margin: var(--collection-item-country-margin);
}

.collection-item__bottom {
    padding: var(--collection-item-bottom-padding);
}

.collection-item[item-type="product"][item-orientation="vertical"] .collection-item__bottom {
    position: var(--collection-item-bottom-position);
    bottom: var(--collection-item-bottom-bottom);
    left: var(--collection-item-bottom-left);
    width: var(--collection-item-bottom-width);
    background-color: var(--collection-item-bottom-background-color);
}
/* ... */

